# ingenuity_ml

./: .gitignore  README.md  pyproject.toml
ingenuity_ml/: model.py
notebooks/: Ingenuity_ML_MNIST_Basic.ipynb  mnist.drawio
